--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
